[tool.poetry]
name = "learning-comfyui"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_comfyui"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
