[tool.poetry]
name = "learning-comfyui"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_comfyui"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
numpy = "^1.26.2"
safetensors = "^0.4.1"
pillow = "^10.1.0"
pyyaml = "^6.0.1"
psutil = "^5.9.6"
accelerate = "^0.25.0"
transformers = "^4.35.2"
einops = "^0.7.0"
scipy = "^1.11.4"
torchsde = {git = "https://github.com/google-research/torchsde.git"}
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
